--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -1,5 +1,5 @@
 	<section class="hero small leading" style="background-image: url( {{ path src="{{ hero_image }}" }} );">
-		<a id="description" class="secondary-nav-link"></a>
+		<a id="description" class="secondary-nav-link leading"></a>
 		<h1>{{ title }}</h1>
 		<!-- <h3>{{ sub_headline }}</h3> -->
 		<div class="mask"></div>
