--- a/statamic/_themes/main/templates/services.html
+++ b/statamic/_themes/main/templates/services.html
@@ -1,5 +1,5 @@
 	<section class="hero small leading" style="background-image: url( {{ path src="{{ hero_image }}" }} );">
-	<a id="individuals" class="secondary-nav-link"></a>
+	<a id="individuals" class="secondary-nav-link leading"></a>
 		<h1>{{ title }}</h1>
 		<div class="mask"></div>
 	</section>
@@ -59,7 +59,7 @@
 			</aside>
 		</div>
 	</section>
-	<section class="content services neighborhood seafoam-bg">
+	<section class="content services seafoam-bg">
 		<a id="trust" class="secondary-nav-link"></a>
 		<div class="container">
 			<main>
