--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -278,6 +278,10 @@
 	</div>
 </section>
 
+{{ entries:listing folder="properties/new-york/lease" conditions="url:!{url}, property_location:{ property_location }"  }}
+{{ if no_results }}
+{{ else }}
+{{ if first }}
 <section class="circle-icon similar-properties-gray" id="featured-properties">
 	<div class="circle-leader">
 		<div class="circle similar-properties-gray">
@@ -287,13 +291,16 @@
 	</div>
 	<div class="container">
 		<div class="property_tile">
-			{{ entries:listing folder="properties/lease" conditions="url:!{url}, property_location:{ property_location }"  }}
-			{{ if no_results }}
-			<p class="no_results">We are currently have no other properties for lease in this neighborhood. Be sure to check back soon.</p>
-			{{ else }}
+		<div class="tile-container">
+		{{ else }}
 			{{ theme:partial src="property_tile" use_context="true" }}
-			{{ endif }}	        
-			{{ /entries:listing }}
+			{{ endif }}
+		{{ if last }}        
+		</div>
 		</div>
 	</div>
-</section>
+</section> 
+{{ endif }}
+{{ endif }}
+{{ /entries:listing }}
+
