new nav / footer

--- a/statamic/_themes/main/partials/footer.html
+++ b/statamic/_themes/main/partials/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="grid-3">
 			<ul>
-				<li><a href="{{ _site_url }}/company">About Us</a></li>
+				<li><a href="{{ _site_url }}/neighborhoods">Neighborhoods</a></li>
 				<li><a href="{{ _site_url }}/reports">Reports</a></li>
 				<li><a href="{{ _site_url }}/faq">FAQ</a></li>
 			</ul>		
