--- a/statamic/_themes/main/partials/nav.html
+++ b/statamic/_themes/main/partials/nav.html
@@ -21,7 +21,7 @@
         {{ endif }}
         {{ /nav }}
 
-        {{ nav from="/" max_depth="1" exclude="properties|company|reports|faq"}}
+        {{ nav from="/" max_depth="1" exclude="properties|neighborhoods|reports|faq"}}
         <li><a href="{{ url }}"{{ if is_current || is_parent }} class="current"{{ endif }}>{{ title }} </a>
          {{ if is_current || is_parent }}
          {{ if children }}
