--- a/statamic/_themes/main/templates/agent_individual.html
+++ b/statamic/_themes/main/templates/agent_individual.html
@@ -2,7 +2,7 @@
 	<div class="container">
 
 		<aside class="sticky">					
-			<img class="circle" src="{{ transform src="{{ image }}" width="300" }}" class="img-circle" />
+			<img class="circle" src="{{ src="{{ image }}" }}" class="img-circle" />
 			<h2>Contact {{ title }}</h2>
 			<ul>
 				<li>{{ theme:partial src="svg/phone" }} {{ phone }}</li>
