--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -1,4 +1,4 @@
-<section class="leading dark">
+<section class="company-hero leading dark">
 <div class="container">
 	<div class="company">
 		<h1>Truth Builds Trust</h1>
@@ -11,7 +11,7 @@
 		<div class="company beliefs">
 			<h2>OUR BELIEFS</h2>
 			<div class="divider"></div>
-			<p>{{ beliefs }}</p>
+			{{ beliefs }}
 		</div>
 	</section>
 	<section>
