--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -43,7 +43,7 @@
 	h1 {
 		margin-top: 0;
 		margin-bottom: 15px;
-		font-size: 68px;
+		@include hhuge;
 	}
 	h3 {
 		font-family: $header-font-medium;
